--- a/backend/Captions/index.html
+++ b/backend/Captions/index.html
@@ -1,4 +1,5 @@
 <head>
+	<script src="js/jquery-3.1.0.min.js"></script>
 	<script src="js/javascript.js"></script>
 	<script src="js/xml2json.min.js"></script>
 </head>
