--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="js/xml2json.min.js"></script>
 <script src="js/script.js"></script>
+<script src="js/javascript.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Ubuntu|Poiret+One|Roboto+Condensed|Raleway|Muli|Quicksand' rel='stylesheet' type='text/css'>
 </head>
 <body>
