--- a/view.html
+++ b/view.html
@@ -6,13 +6,16 @@
   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="js/xml2json.min.js"></script>
+  <script src="js/javascript.js"></script>
   <script src="js/view.js"></script>
 </head>
 <body>
   <div id="mainContainer">
     <a id="back-button" href="javascript:history.back()">Go Back</a>
     <div id="video" class="videoContainer"></div>
-    <div id="infoContainer">  </div>
+    <div id="infoContainer"> 
+    <p id="captions"></p>
+    </div>
   </div>
 </body>
 </html>
