everything to => inline html

--- a/view.html
+++ b/view.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="js/xml2json.min.js"></script>
-  <script src="js/view.js"></script>
 </head>
 <body>
   <div id="mainContainer">
@@ -14,6 +13,260 @@
     <div id="video" class="videoContainer"></div>
     <div id="infoContainer">
     <p id="captions"></p>
+    <!--<div id="player"></div>-->
+    <script>
+
+      // OUR CODE
+      function makeItToASpan(){
+        console.log("make_span");
+        $('p').each(function() {
+            var $this = $(this);
+            console.log($this);
+            $this.html($this.text().replace(/\b(\w+)\b/g, "<span>$1</span>"));
+        });
+
+        $('p span').on('click',function(){
+        $('p span').css('background-color','transparent');
+           $(this).css('background-color','#ffff66');
+           queryDictionary($(this).text())
+        });
+    }
+
+
+
+    function reqListener () {
+      x2js = new X2JS();
+      var total_caption = "";
+      jsonObj = x2js.xml_str2json( this.responseText );
+      array_length = jsonObj.transcript.text.length;
+      //filtered_data = JSON.parse(jsonObj);
+        // console.log(this.responseText);
+        // console.log(jsonObj);
+        // console.log(jsonObj.length);
+        // console.log(jsonObj.transcript.text.length);
+        /*
+      1. for loop to parse through each object (Obj. 1, 2, 3)
+      2. append each _text property value to a "total" value
+      */
+      for (i = 0; i < array_length;i++){
+        total_caption += jsonObj.transcript.text[i].__text;
+      }
+      //console.log(total_caption);
+      $("#captions").append(total_caption);
+      makeItToASpan();
+
+    }
+    function retrieveCaptions(videoId){
+
+      var x2js,
+        jsonObj,
+        array_length,
+        filtered_data;
+        var oReq = new XMLHttpRequest();
+    oReq.addEventListener("load", reqListener);
+    oReq.open("GET", "https://video.google.com/timedtext?lang=en&v=" + videoId);
+    oReq.send();
+    //var filtered_data = JSON.parse(jsonObj);
+    }
+
+    var calcWidth = function() {
+        $('#preview-frame').width($('#video').width());
+    }
+    $(window).resize(function() {
+        calcWidth();
+    }).load(function() {
+        calcWidth();
+    });
+
+    function queryImages(word){
+        var xmlhttp = new XMLHttpRequest();
+        //var url = "https://api.flickr.com/services/rest/?method=flickr.photos.search&tags=" + word + "&api_key=ff12a1da05f0667004a7c173cfeab461&per_page=5&format=rest";
+    var url = "https://api.flickr.com/services/rest/?method=flickr.photos.search&tags=sunshine&sort=relevance&api_key=ff12a1da05f0667004a7c173cfeab461&per_page=5&format=rest";
+        xmlhttp.onreadystatechange = function() {
+         if (this.readyState == 4 && this.status == 200) {
+
+          var x2js = new X2JS();
+          var jsonObj = x2js.xml_str2json( this.responseText );
+          var photos = jsonObj.rsp.photos.photo;
+          var photos_lng = jsonObj.rsp.photos.photo.length;
+          for (i=0; i< photos_lng;i++){
+            var photo = photos[i];
+            console.log(photo);
+            var img_src = "https://farm"+photo["_farm"] + ".staticflickr.com/"+photo["_server"] + "/"+photo["_id"] + "_"+photo["_secret"]+".jpg";
+            console.log(img_src);
+          }
+
+
+       }
+
+      };
+      xmlhttp.open("GET", url, true);
+      xmlhttp.send();
+    }
+
+    function queryDictionary(word){
+      var xmlhttp = new XMLHttpRequest();
+
+      var url = "https://crossorigin.me/http://www.dictionaryapi.com/api/v1/references/learners/xml/"+word+"?key=eaf69752-c354-4489-8cc6-99948b85a285";
+
+     xmlhttp.onreadystatechange = function() {
+         if (this.readyState == 4 && this.status == 200) {
+             var x2js = new X2JS();
+             var jsonObj = x2js.xml_str2json( this.responseText );
+            //  console.warn(jsonObj.entry_list.entry);
+             if(jsonObj.entry_list.entry)
+             var audioFile = jsonObj.entry_list.entry.sound?jsonObj.entry_list.entry.sound.wav:jsonObj.entry_list.entry[0].sound.wav;
+             var subDirectory = "";
+             if(audioFile.indexOf('bix') == 0){
+               subDirectory = "bix";
+             }else if (audioFile.indexOf('gg') == 0){
+               subDirectory = "gg";
+             }else if (/^\d\w/g.exec(audioFile) != null){
+               subDirectory="number";
+             }else{
+               subDirectory = audioFile[0];
+             }
+             var path =  "http://media.merriam-webster.com/soundc11/"+subDirectory.toLowerCase()+"/"+audioFile;
+          var audioElement = document.createElement('audio');
+          audioElement.setAttribute('src', path);
+          audioElement.play();
+         // console.log(this.responseText);
+         }
+     };
+     xmlhttp.open("GET", url, true);
+     xmlhttp.send();
+    }
+
+    //Executing these functions
+    //Declare our Videos
+      var videoIdnmbr = parent.document.URL.substring(parent.document.URL.indexOf('?videoId=') + 9, parent.document.URL.indexOf('?videoId=') + 20);
+      var tag = document.createElement('script');
+
+            tag.src = "https://www.youtube.com/iframe_api";
+            var firstScriptTag = document.getElementsByTagName('script')[0];
+            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+            // 3. This function creates an <iframe> (and YouTube player)
+            //    after the API code downloads.
+            var player;
+
+            function seekTo(time) {
+                player.seekTo(time);
+                newUrl = updateQueryStringParameter(window.location.toString(), "start", time);
+                window.history.pushState({
+                    time: time
+                }, "Time " + time, newUrl);
+                $(window).trigger('scroller.change', {
+                    scrollTo: time
+                });
+
+            }
+
+            function updateQueryStringParameter(uri, key, value) {
+                var re = new RegExp("([?&])" + key + "=.*?(&|$)", "i");
+                var separator = uri.indexOf('?') !== -1 ? "&" : "?";
+                if (uri.match(re)) {
+                    return uri.replace(re, '$1' + key + "=" + value + '$2');
+                } else {
+                    return uri + separator + key + "=" + value;
+                }
+            }
+
+            function onYouTubeIframeAPIReady() {
+                player = new YT.Player('video', {
+                    height: '360',
+                    width: '640',
+                    videoId: videoIdnmbr, 
+                    events: {
+                        'onReady': onPlayerReady
+                            //'onStateChange': onPlayerStateChange
+                    }
+                });
+            }
+
+            window.addEventListener('popstate', function(event) {
+                if (event.state && event.state.time) {
+                    seekTo(event.state.time);
+                } else {
+                    seekTo(0);
+                }
+            }, false);
+
+            function onPlayerReady(event) {
+                event.target.seekTo(4);
+                event.target.playVideo();
+                event.target.seekTo(4);
+                YouTubeAutoScrolledSubtitles("#video", "#captions");
+            }
+
+            var done = false;
+
+            function onPlayerStateChange(event) {
+                //if (event.data == YT.PlayerState.PLAYING && !done) {}
+            }
+
+            function stopVideo() {
+                player.stopVideo();
+            }
+
+            function formatSeconds(totalSeconds) {
+                var hours = totalSeconds / 3600;
+                var minutes = (totalSeconds % 3600) / 60;
+                var seconds = (totalSeconds % 3600) % 60;
+                return hours + ":" + minutes + ":" + seconds;
+            }
+
+            var YouTubeAutoScrolledSubtitles = function(playerContainerSelector, scrollableContainerSelector) {
+                var playerDiv = $(playerContainerSelector).get(0);
+                var containerSelector = scrollableContainerSelector;
+                var container = $(containerSelector);
+                var scrollToTimePosition;
+                var scroller = function(time) {
+                    if (!time) {
+                        time = Math.round(player.getCurrentTime());
+                        console.log(time);
+                    }
+
+                    if (time > 0 && scrollToTimePosition != time) {
+                        var anchor = $(containerSelector + "  a[name=" + time + "]");
+                        if (anchor.length) {
+                            scrollToTimePosition = time;
+                            var scrollTarget = anchor.data('absoluteDistanceFromTop') - container.offset().top;
+                            container.animate({
+                                scrollTop: scrollTarget
+                            }, 1000);
+                            //$('#caption-scroll-top').html(anchor.html());
+                        }
+                    }
+                };
+
+                $(window).bind('scroller.change', function(ev, data) {
+                    scroller(data.scrollTo);
+                });
+
+                // Preparing data for scroll, savind absolute anchors position from top
+                var prepareAnchors = function() {
+                    $(containerSelector + " a").each(function() {
+                        $(this).data('absoluteDistanceFromTop', $(this).offset().top);
+                    });
+                };
+
+                // Start scrolling
+                var scroll = function() {
+                    var scrollerInterval = setInterval(function() {
+                        if (player.getPlayerState() == 1) {
+                            scroller();
+                        }
+                    }, 1000);
+                };
+
+                prepareAnchors();
+                scroll();
+            };
+    calcWidth();
+    retrieveCaptions(videoIdnmbr);
+    queryImages("placeholder");
+    </script>
     </div>
   </div>
 </body>
