A tags for references

--- a/view.html
+++ b/view.html
@@ -39,19 +39,11 @@
       var total_caption = "";
       jsonObj = x2js.xml_str2json( this.responseText );
       array_length = jsonObj.transcript.text.length;
-      //filtered_data = JSON.parse(jsonObj);
-        // console.log(this.responseText);
-        // console.log(jsonObj);
-        // console.log(jsonObj.length);
-        // console.log(jsonObj.transcript.text.length);
-        /*
-      1. for loop to parse through each object (Obj. 1, 2, 3)
-      2. append each _text property value to a "total" value
-      */
       for (i = 0; i < array_length;i++){
-        total_caption += jsonObj.transcript.text[i].__text;
+        total_caption = total_caption + "<a name=" + jsonObj.transcript.text[i]._start + " >" + jsonObj.transcript.text[i].__text + "</a>"+"<br>";
+        console.log(total_caption);
       }
-      //console.log(total_caption);
+      console.log(total_caption);
       $("#captions").append(total_caption);
       makeItToASpan();
 
