--- a/view.html
+++ b/view.html
@@ -4,9 +4,11 @@
   <title>Watch Video</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="js/xml2json.min.js"></script>
   <script src="js/view.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div id="mainContainer">
