--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Learn a Language!</title>
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="js/xml2json.min.js"></script>
 <script src="js/script.js"></script>
@@ -13,8 +15,8 @@
   <div id="navbar">
     <nav>
       <div class="companyInfo">
-        <i class="fa fa-language fa-2x" aria-hidden="true"></i>
-        <h1 class="companyName">Watch N Learn</h1>
+        <i class="fa fa-language fa-3x" aria-hidden="true"></i>
+        <h1 class="companyName"><a href="index.html" id="title">Watch N Learn</a></h1>
       </div>
       <div class="searchForm">
         <!-- <h1>HELLO</h1> -->
