--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="js/xml2json.min.js"></script>
 <script src="js/script.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Ubuntu|Poiret+One|Roboto+Condensed|Raleway|Muli|Quicksand' rel='stylesheet' type='text/css'>
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
   <div id="navbar">
