--- a/view.html
+++ b/view.html
@@ -12,6 +12,7 @@
 
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
   <div id="mainContainer">
