--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
       <div class="companyInfo">
         <i class="fa fa-language fa-3x" aria-hidden="true"></i>
-        <h1 class="companyName"><a href="index.html" id="title">Watch N Learn</a></h1>
+        <h1 class="companyName"><a href="index.html" id="title">Watch & Learn</a></h1>
       </div>
       <div class="searchForm">
         <!-- <h1>HELLO</h1> -->
